# intercal

./: .gitignore  BUGS  BUGS.txt  HISTORY  MANIFEST  MANIFEST.txt  Makefile  Makefile.am  Makefile.in  NEWS  NEWS.txt  READ.ME  README  README.txt  REPO-README  THEORY  abcess.h  aclocal.m4  arrgghh.c  autogen.sh  cesspool.c  cesspool.h  cleanick.bat  cleanick.sh  config.ac  config.cache  config.h.in  config.in  config.sh  config.status  configdj.sh  configure  configure.ac  configure.sh  control  districk.bat  districk.sh  djfix.bat  djfix.sh  feh.c  (+27 more)
buildaux/: Makefile.am  Makefile.in  build-dj.sh  buildconfig  buildconfig.ac  djgpp-site-file.sh  hostmak.in  interfuzz.pl  regenerate-build-system.sh
doc/: Makefile  READ.ME  RFC-DRAFT.roff  THEORY  THEORY.txt  chip.spec  chipspec.txt  convickt.1  fix83.pl  fixtoc.pl  ick.1  ick.txi  ick.txt  ick.xml  ickstyle.css  ickwhile.txt  intercal.mm  intercal.ms  intercal.sty  intercal.txt  original.txt  t.t  tempnote.txt  tidy.cfg
etc/: IFFI.spec  cftoec.sh  cfunge.patch  ctrlmfix.bat  ctrlmfix.sh  intercal.el  intercal.vim  interfuzz.pl  splinttest.sh
etc/IFFI/: IFFI.c  IFFI.h
include/: abcess.h  fiddle.h  ick_lose.h  lose.h  syslib.3i  yuk.h
pit/: .gitignore  CATALOG  Makefile  blinkers  bubble.doc  bubble.i  count.3i  count.doc  delta.fft  fft.doc  fft.i  flonck.doc  flonck.tst  glider  gun  hail_mary.3i  hail_mary.doc  icat.i  interfunge.i  life.doc  life2.i  pass.chk  pass.i  pass.tst  pi.chk  pi.doc  regresscheck  rot13.i  sink.doc  t_tet  testcompile  tophat.fft  tpk.i  unlambda.i
pit/explib/: compunex.c  ecto_b98.c  ecto_b98.doc  syslibc.c  syslibc.doc
pit/lib/: 1910.doc  lib2.i  numio.doc  numio.i  plus.i  syslib.3i  syslib.4i  syslib.5i  syslib.6i  syslib.7i  syslib.i  syslib3-7.doc  syslib5.5i  syslib7.7i  syslibc.doc
pit/tests/: arrtest.doc  count.3i  count.chk  iffit.doc  iffit1.i  iffit2.b98  ignorearray.i  ignorret.doc  limits.3i  limits.i  permute.doc  testarray.i  testlib2.i  testops.3i  testops.5i  testops5.5i  testsplat.chk  testsplat.i  version.4i  version.doc
prebuilt/: lexer.c  oil-oil.c  parser.c  parser.h
src/: BUGS  Makefile  Makefile.in  abcess.h  abcessh.in  arrgghh.c  bconfigh.in  bin2c.c  cesspool.c  cesspool.h  clc-cset.c  configdj.h  configh.in  convickt.c  coopt.sh  cooptsh.in  dekludge.c  feh.c  feh.h  feh2.c  fiddle.c  fiddle.h  ick-wrap.c  ick.bat  ick.h  ick.y  ick_bool.h  ick_ec.c  ick_ec.h  ick_lose.c  ick_lose.h  idiotism.oil  lexer.l  lose.c  lose.h  numerals.c  oil.h  oil.y  parser.y  perpet.c  (+11 more)
src/pit/: CATALOG
website/: .gitignore  Makefile  calc-intercal.el  index.html  index.html.in  iperl.html  nelson.html  overloading.html  paper.html  stross.html  upload
